//directive.proto
syntax = 'proto3';
package proto;
option go_package = "./proto";

//const int32 max_description_size = 256;
//const int32 max_directive_payload = 50;
message header{
    int32 device_id = 1;
    int32 conversation_id = 2;
    int32 device_status = 3;
    int32 ip_addr = 4;
}

message directive{
    header uuid = 1;
    int32 command = 3;
    int32 buffer_total_size = 4;
    int32 payload_length = 5;
    bool  response = 6;
    bytes buffer = 7; //Embedded has buffer limits of max_size
}

message start{
    header uuid = 1;
}

message stop{
    header uuid = 1;
}

message stream_config{
    header uuid = 1;
    int32 stream_type = 2;
    int32 mspf = 3;
    int32 max_frames = 4;
    int32 stream_trigger = 5;
}

message ack{
    header uuid = 1;
    int32 size = 2;
}



